# atomization

./: .cursorrules  .envrc  .gitignore  Atomization.lean  CLAUDE.md  Dockerfile  Main.lean  README.md  atomize.py  atomize_matmul.json  atomizer.py  docker-compose.yml  flake.nix  lake-manifest.json  lakefile.toml  pyproject.toml
.github/workflows/: ci.yml
Atomization/: Basic.lean  GramProduct.lean
coq/: .gitignore  README.md  pyproject.toml
coq/nix/: shell.nix
coq/notebooks/: scratch.ipynb
coq/src/coq_atomization/: __init__.py
dafny/: DAFNY-README.md  dafny_atomize.py  dafny_atomizer.py  dafny_deatomize.py  dafny_parser.py  dafny_utils.py  fibonacci_selected_modified.dfy  get_code.py  get_proofs.py  get_specs.py
dafny/dafny_files/: fibonacci_selected_modified.dfy  fibonacci_selected_modified_reconstructed.dfy  sum_simple_reads.dfy
dafny/examples/: fibonacci.dfy  fibonacci_selected_modified_analysis.json  fibonacci_selected_modified_reconstructed.dfy  sum_analysis.json  tetrahedral_modified.dfy
docker/: Dockerfile._nix  Dockerfile.atomization  Dockerfile.common  entrypoint.sh  grant_privileges.sh
examples/coq/: days.v  minimal.v  sumupto.v  sumupto2.v  trivial.v
examples/dafny/: binary_search_requires_only_modified.dfy  class_example.dfy  dafny_import_example.dfy  fibonacci_selected_modified_analysis.json  sum.dfy  sum_analysis.json  sum_reconstructed.dfy  tetrahedral.dfy
examples/isabelle/: Demo_Fib.thy  Drinker.thy
examples/lean/: Main.lean  lake-manifest.json  lakefile.toml
examples/lean/Atomization/: Basic.lean  GramProduct.lean
examples/lean/visualization/: Basic.dot  Basic.json  Basic.lean  README.md  run_example.sh  run_visualization.py
examples/refinedc/src/: example.c
examples/rust/quicksort/: functional-quicksort.rs  rust-quicksort.rs
nix/: fmt.nix  python.nix  shell.nix
scripts/: grant_privileges.sh  visualize_lean.sh
src/atomization/: atomizer.py  atomizer_dry.py
src/atomization/c/: atomizer.py  dependency_extractor.py  lsp_client.py  treesitter_client.py
src/atomization/common/lsp/: basic.py  transport.py
src/atomization/coq/: __init__.py  atomizer.py  types.py
src/atomization/dafny/: README.md  atomizer.py  lsp_client.py  parser.py
src/atomization/isabelle/: README.md  atomizer.py  atomizer_2.scala  latex_unicode_map.json  run_split_isa_specs_proofs.py  split_isa_specs_proofs.scala
src/atomization/lean/: atomize.py  atomizer.py  create_lean_project.py  visualizer.py
src/atomization/rust/: Cargo.toml  README.md  atomizer.py  call_graph_with_syn_v2.rs
test/: coq_test.py  isabelle_test.py  lean_visualizer_test.py  test_atoms_db.py  test_dafny_lsp.py  test_db_cleanup.py  test_isa_atom2.py  test_lean_atom.py  test_rust_atomizer.py
test/atomization/: test_atomizer.py
test/networked/: test_atoms_db.py
test_programs/lean/: Fib.lean
tests/: coq_test.py  test_atomizer.py
