[project]
name = "atomization"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bidict>=0.23.1",
    "coqpyt",
    "mysql-connector-python>=9.1.0",
    "python-dotenv>=1.0.1",
    "pantograph",
    "tqdm>=4.67.1",
    "dataclasses-json>=0.6.7",
    "bidict>=0.23.1",
    "pygls>=1.3.1",
    "tree-sitter-c==0.23.4",
    "tree-sitter==0.24.0",
]

[project.scripts]
atomize = "atomization.atomizer:run_atomizer"
dry = "atomization.atomizer:dry_run"
test = "pytest:main"

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-mock>=3.10.0", "ruff>=0.9.1", "ipykernel>=6.29.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomization"]


[tool.uv.sources]
coqpyt = { git = "https://github.com/sr-lab/coqpyt" }
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph" }

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_test.py", "test_*.py"]
pythonpath = ["src"]
