[project]
name = "atomization"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bidict>=0.23.1",
    "coqpyt",
    "mysql-connector-python>=9.1.0",
    "python-dotenv>=1.0.1",
    "pantograph",
    "tqdm>=4.67.1",
    "dataclasses-json>=0.6.7",
]

[project.scripts]
atomize = "atomization.atomizer:run_atomizer"
dry_coq = "atomization.atomizer:dry_coq"
dry = "atomization.atomizer:dry"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.1",
    "ipykernel>=6.29.5",
    "typer>=0.16.0",
    "pyright>=1.1.402",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomization"]

[tool.uv.sources]
coqpyt = { git = "https://github.com/sr-lab/coqpyt" }
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph", rev = "dc6c465a960e2770a6b6aa713d3c958eca0c9575" }

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_test.py", "test_*.py"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Ignore networked tests by default (require external dependencies)
addopts = "--ignore=test/networked/" # override with `PYTEST_ADDOPTS="" uv run pytest` on server.
