[project]
name = "coq-atomization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinnd@riseup.net" }
]
requires-python = ">=3.12"
dependencies = [
    "coqpyt",
]

[project.scripts]
main = "coq_atomization:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
coqpyt = { git = "https://github.com/sr-lab/coqpyt" }
